--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -57,9 +57,12 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
+      contents: write
 
     steps:
+
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Restore cached build
       uses: actions/cache@v3
